test/frontend/fail/bad_unary_operator.osl
struct S { int empty; };
S __operator__not__(S x, S y) { return S(0); }
shader foo() {}
